--- a/.travis.yml
+++ b/.travis.yml
@@ -78,10 +78,9 @@ install:
 script:
 - install_run $PLAT
 before_deploy:
-- export RELEASE_PKG_DIR=$(ls /home/travis/build/bonfus/muLFC-wheels/wheelhouse)
-- echo "deploying $RELEASE_PKG_DIR to GitHub releases"
-- cd "${RELEASE_PKG_DIR}"
-- ls
+- export RELEASE_PKG_FILE=$(ls /home/travis/build/bonfus/muLFC-wheels/wheelhouse)
+- echo "deploying $RELEASE_PKG_FILE to Packagecloud releases"
+- pwd
 
 deploy:
   provider: packagecloud
