--- a/appveyor.yml
+++ b/appveyor.yml
@@ -20,16 +20,16 @@ environment:
       PYTHON_ARCH: "64"
       BUILD_DEPENDS: "numpy==1.8.0"
       TEST_DEPENDS: "numpy==1.8.0"
-    - PYTHON: "C:\\Miniconda3"
-      PYTHON_VERSION: "3.4"
-      PYTHON_ARCH: "32"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
-    - PYTHON: "C:\\Miniconda3-x64"
-      PYTHON_VERSION: "3.4"
-      PYTHON_ARCH: "64"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
+#    - PYTHON: "C:\\Miniconda3"
+#      PYTHON_VERSION: "3.4"
+#      PYTHON_ARCH: "32"
+#      BUILD_DEPENDS: "numpy==1.9.0"
+#      TEST_DEPENDS: "numpy==1.9.0"
+#    - PYTHON: "C:\\Miniconda3-x64"
+#      PYTHON_VERSION: "3.4"
+#      PYTHON_ARCH: "64"
+#      BUILD_DEPENDS: "numpy==1.9.0"
+#      TEST_DEPENDS: "numpy==1.9.0"
     - PYTHON: "C:\\Miniconda35"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
