--- a/appveyor.yml
+++ b/appveyor.yml
@@ -93,12 +93,9 @@ artifacts:
 test_script:
     - cmd: "%CMD_IN_ENV% python setup.py test"
 
-after_test:
+on_success:
     - cmd: "echo [pypi] > %USERPROFILE%\\.pypirc"
+    - cmd: "echo repository=https://testpypi.python.org/pypi >> %USERPROFILE%\\.pypirc"
     - cmd: "echo username: pietro.bonfa >> %USERPROFILE%\\.pypirc"
     - cmd: "echo password: %pypi% >> %USERPROFILE%\\.pypirc"
-    - "%CMD_IN_ENV% python setup.py bdist_wheel"
-    - conda install --yes "twine"
-
-on_success:
-    - cmd: "%CMD_IN_ENV% twine upload dist\\*.whl"
+    - "%CMD_IN_ENV% python setup.py bdist_wheel upload -r pypi"
