--- a/appveyor.yml
+++ b/appveyor.yml
@@ -94,8 +94,9 @@ test_script:
     - cmd: "%CMD_IN_ENV% python setup.py test"
 
 on_success:
+    - conda install -c conda-forge twine
     - cmd: "echo [pypi] > %USERPROFILE%\\.pypirc"
     - cmd: "echo repository=https://testpypi.python.org/pypi >> %USERPROFILE%\\.pypirc"
     - cmd: "echo username: pietro.bonfa >> %USERPROFILE%\\.pypirc"
     - cmd: "echo password: %pypi% >> %USERPROFILE%\\.pypirc"
-    - "%CMD_IN_ENV% python setup.py bdist_wheel upload -r pypi"
+    - "%CMD_IN_ENV% twine upload %REPO_DIR%\\dist\\*.whl"
