--- a/appveyor.yml
+++ b/appveyor.yml
@@ -99,4 +99,4 @@ on_success:
     - cmd: "echo repository=https://testpypi.python.org/pypi >> %USERPROFILE%\\.pypirc"
     - cmd: "echo username: pietro.bonfa >> %USERPROFILE%\\.pypirc"
     - cmd: "echo password: %pypi% >> %USERPROFILE%\\.pypirc"
-    - "%CMD_IN_ENV% twine upload %REPO_DIR%\\dist\\*.whl"
+    - "%CMD_IN_ENV% twine upload dist\\*.whl"
