--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
-language: python
-python: 3.5
+language: C
 
 env:
   global:
@@ -44,8 +43,8 @@ matrix:
     env:
     - MB_PYTHON_VERSION=3.6
     - PLAT=i686
-#  - os: osx
-#    #    language: generic
+  - os: osx
+    language: generic
 #    env:
 #    - MB_PYTHON_VERSION=2.7
 #  - os: osx
@@ -66,8 +65,12 @@ matrix:
 #    - MB_PYTHON_VERSION=pypy-5.7
 before_install:
 - ls && pwd
-- source multibuild/common_utils.sh
-- source multibuild/travis_steps.sh
+- if [ "$TRAVIS_OS_NAME" == "linux" ]; then
+        source multibuild/common_utils.sh
+        source multibuild/travis_steps.sh
+  else
+        brew update
+  fi
 - before_install
 install:
 - clean_code $REPO_DIR $BUILD_COMMIT
