--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language: C
+language: python
+python: 3.5
 
 env:
   global:
@@ -15,38 +16,38 @@ matrix:
   exclude:
   - python: 3.5
   include:
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=2.7
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=2.7
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.4
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.4
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.5
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.5
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.6
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.6
-    - PLAT=i686
-  - os: osx
-    language: generic
+#  - os: linux
 #    env:
 #    - MB_PYTHON_VERSION=2.7
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=2.7
+#    - PLAT=i686
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.4
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.4
+#    - PLAT=i686
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.5
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.5
+#    - PLAT=i686
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.6
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.6
+#    - PLAT=i686
+  - os: osx
+    language: generic
+    env:
+    - MB_PYTHON_VERSION=2.7
 #  - os: osx
 #    #    language: generic
 #    env:
@@ -65,12 +66,8 @@ matrix:
 #    - MB_PYTHON_VERSION=pypy-5.7
 before_install:
 - ls && pwd
-- if [ "$TRAVIS_OS_NAME" == "linux" ]; then
-        source multibuild/common_utils.sh
-        source multibuild/travis_steps.sh
-  else
-        brew update
-  fi
+- source multibuild/common_utils.sh
+- source multibuild/travis_steps.sh
 - before_install
 install:
 - clean_code $REPO_DIR $BUILD_COMMIT
