--- a/.travis.yml
+++ b/.travis.yml
@@ -46,22 +46,22 @@ matrix:
 #    env:
 #    - MB_PYTHON_VERSION=3.6
 #    - PLAT=i686
+#  - os: osx
+#    language: generic
+#    env:
+#    - MB_PYTHON_VERSION=2.7
   - os: osx
     language: generic
     env:
-    - MB_PYTHON_VERSION=2.7
-#  - os: osx
-#    #    language: generic
-#    env:
-#    - MB_PYTHON_VERSION=3.4
+    - MB_PYTHON_VERSION=3.4
 #  - os: osx
 #    #    language: generic
 #    env:
 #    - MB_PYTHON_VERSION=3.5
-#  - os: osx
-#    #    language: generic
-#    env:
-#    - MB_PYTHON_VERSION=3.6
+  - os: osx
+    language: generic
+    env:
+    - MB_PYTHON_VERSION=3.6
 #  - os: osx
 #    #    language: generic
 #    env:
