--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
   global:
   - REPO_DIR=muLFC
   - BUILD_COMMIT=v0.0.1
-  - BUILD_DEPENDS="numpy"
-  - TEST_DEPENDS="numpy"
+  - BUILD_DEPENDS="numpy==1.8.0"
+  - TEST_DEPENDS="numpy==1.8.0"
   - PLAT=x86_64
   - UNICODE_WIDTH=32
 
