Build last commit, no deploy

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,7 @@ environment:
   global:
     REPO_DIR: muLFC
     PACKAGE_NAME: muLFC
-    BUILD_COMMIT: v0.0.1
+    BUILD_COMMIT: 7860543a0ac6fd3de6b3b5ac5639a51b44c37835
 
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
@@ -98,6 +98,6 @@ on_success:
     - cmd: "echo [pypi] > %USERPROFILE%\\.pypirc"
     - cmd: "echo username: pietro.bonfa >> %USERPROFILE%\\.pypirc"
     - cmd: "echo password: %pypi% >> %USERPROFILE%\\.pypirc"
-    - "%CMD_IN_ENV% twine upload dist\\*.whl"
+    #- "%CMD_IN_ENV% twine upload dist\\*.whl"
     - cmd: "del %USERPROFILE%\\.pypirc"
     # "echo repository=https://test.pypi.org/legacy/ >> %USERPROFILE%\\.pypirc"
