Corrected numpy versions, added Py3.4 on Windows

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,36 +22,36 @@ environment:
       PYTHON_ARCH: "64"
       BUILD_DEPENDS: "numpy==1.8.0"
       TEST_DEPENDS: "numpy==1.8.0"
-#    - PYTHON: "C:\\Miniconda3"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "32"
-#      BUILD_DEPENDS: "numpy==1.9.0"
-#      TEST_DEPENDS: "numpy==1.9.0"
-#    - PYTHON: "C:\\Miniconda3-x64"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "64"
-#      BUILD_DEPENDS: "numpy==1.9.0"
-#      TEST_DEPENDS: "numpy==1.9.0"
+    - PYTHON: "C:\\Miniconda3"
+      PYTHON_VERSION: "3.4"
+      PYTHON_ARCH: "32"
+      BUILD_DEPENDS: "numpy==1.9.0"
+      TEST_DEPENDS: "numpy==1.9.0"
+    - PYTHON: "C:\\Miniconda3-x64"
+      PYTHON_VERSION: "3.4"
+      PYTHON_ARCH: "64"
+      BUILD_DEPENDS: "numpy==1.9.0"
+      TEST_DEPENDS: "numpy==1.9.0"
     - PYTHON: "C:\\Miniconda35"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "32"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
+      BUILD_DEPENDS: "numpy==1.10.0"
+      TEST_DEPENDS: "numpy==1.10.0"
     - PYTHON: "C:\\Miniconda35-x64"
       PYTHON_VERSION: "3.5"
       PYTHON_ARCH: "64"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
+      BUILD_DEPENDS: "numpy==1.10.0"
+      TEST_DEPENDS: "numpy==1.10.0"
     - PYTHON: "C:\\Miniconda36"
       PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "32"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
+      BUILD_DEPENDS: "numpy==1.12.0"
+      TEST_DEPENDS: "numpy==1.12.0"
     - PYTHON: "C:\\Miniconda36-x64"
       PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
-      BUILD_DEPENDS: "numpy==1.8.0"
-      TEST_DEPENDS: "numpy==1.8.0"
+      BUILD_DEPENDS: "numpy==1.12.0"
+      TEST_DEPENDS: "numpy==1.12.0"
 
 
 # We always use a 64-bit machine, but can build x86 distributions
