--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ env:
   - REPO_DIR=muLFC
   - BUILD_COMMIT=c2cdb3bf7a147ead60a9202ef72ebdb0fd631566
   - BUILD_DEPENDS="numpy==1.8.0"
-  - TEST_DEPENDS="numpy==1.12.0"
+  - TEST_DEPENDS="numpy==1.12.0 pytest"
   - PLAT=x86_64
   - UNICODE_WIDTH=32
 
