--- a/appveyor.yml
+++ b/appveyor.yml
@@ -81,6 +81,8 @@ build_script:
 
     # build wheel:
     - cd %REPO_DIR%
+    # remove previous builds, if present
+    - rm -Rf dist
     - git checkout %BUILD_COMMIT%
     - "%CMD_IN_ENV% python setup.py bdist_wininst"
     - "%CMD_IN_ENV% python setup.py bdist_msi"
