Added image info for appveyor

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -54,6 +54,8 @@ environment:
       TEST_DEPENDS: "numpy==1.12.0"
 
 
+image: Visual Studio 2017
+configuration: Release
 # We always use a 64-bit machine, but can build x86 distributions
 # with the TARGET_ARCH variable.
 platform:
