--- a/.travis.yml
+++ b/.travis.yml
@@ -18,50 +18,57 @@ matrix:
   exclude:
   - python: 3.5
   include:
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=2.7
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=2.7
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.4
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.4
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.5
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.5
-    - PLAT=i686
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.6
-  - os: linux
-    env:
-    - MB_PYTHON_VERSION=3.6
-    - PLAT=i686
-  - os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=2.7
-  - os: osx
-    language: generic
-    env:
-    - MB_PYTHON_VERSION=3.4
-#  - os: osx
-#    #    language: generic
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=2.7
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=2.7
+#    - PLAT=i686
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.4
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.4
+#    - PLAT=i686
+#  - os: linux
 #    env:
 #    - MB_PYTHON_VERSION=3.5
+#  - os: linux
+#    env:
+#    - MB_PYTHON_VERSION=3.5
+#    - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.7
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.7
+    - PLAT=i686
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.8
+    - PLAT=i686
+#  - os: osx
+#    language: generic
+#    env:
+#    - MB_PYTHON_VERSION=2.7
   - os: osx
     language: generic
     env:
     - MB_PYTHON_VERSION=3.6
+  - os: osx
+    language: generic
+    env:
+    - MB_PYTHON_VERSION=3.7
+  - os: osx
+    language: generic
+    env:
+    - MB_PYTHON_VERSION=3.8
 #  - os: osx
 #    #    language: generic
 #    env:
