--- a/appveyor.yml
+++ b/appveyor.yml
@@ -43,12 +43,22 @@ environment:
 #      BUILD_DEPENDS: "numpy==1.10.1"
 #      TEST_DEPENDS: "numpy==1.10.1"
     - PYTHON: "C:\\Miniconda36"
-      PYTHON_VERSION: "3.6"
+      PYTHON_VERSION: "3.7"
       PYTHON_ARCH: "32"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
     - PYTHON: "C:\\Miniconda36-x64"
-      PYTHON_VERSION: "3.6"
+      PYTHON_VERSION: "3.7"
+      PYTHON_ARCH: "64"
+      BUILD_DEPENDS: "numpy==1.17.3"
+      TEST_DEPENDS: "numpy==1.17.3"
+    - PYTHON: "C:\\Miniconda36"
+      PYTHON_VERSION: "3.8"
+      PYTHON_ARCH: "32"
+      BUILD_DEPENDS: "numpy==1.17.3"
+      TEST_DEPENDS: "numpy==1.17.3"
+    - PYTHON: "C:\\Miniconda36-x64"
+      PYTHON_VERSION: "3.8"
       PYTHON_ARCH: "64"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
