Build python 3.6 on linux

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,11 +34,11 @@ matrix:
 #    - PLAT=i686
 #  - os: linux
 #    env:
-#    - MB_PYTHON_VERSION=3.5
-#  - os: linux
-#    env:
-#    - MB_PYTHON_VERSION=3.5
-#    - PLAT=i686
+    - MB_PYTHON_VERSION=3.6
+  - os: linux
+    env:
+    - MB_PYTHON_VERSION=3.6
+    - PLAT=i686
   - os: linux
     env:
     - MB_PYTHON_VERSION=3.7
