--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,68 +4,37 @@ environment:
   global:
     REPO_DIR: muLFC
     PACKAGE_NAME: muLFC
-    BUILD_COMMIT: v0.0.2
+    BUILD_COMMIT: v0.0.3
 
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
     # /E:ON and /V:ON options are not enabled in the batch script intepreter
     # See: http://stackoverflow.com/a/13751649/163740
-    CMD_IN_ENV: "cmd /E:ON /V:ON /C %APPVEYOR_BUILD_FOLDER%\\multibuild\\ci\\appveyor\\windows_sdk.cmd"
+    # CMD_IN_ENV: "cmd /E:ON /V:ON /C %APPVEYOR_BUILD_FOLDER%\\multibuild\\ci\\appveyor\\windows_sdk.cmd"
 
   matrix:
-#    - PYTHON: "C:\\Miniconda"
-#      PYTHON_VERSION: "2.7"
-#      PYTHON_ARCH: "32"
-#      BUILD_DEPENDS: "numpy==1.8.0"
-#      TEST_DEPENDS: "numpy==1.8.0"
-#    - PYTHON: "C:\\Miniconda-x64"
-#      PYTHON_VERSION: "2.7"
-#      PYTHON_ARCH: "64"
-#      BUILD_DEPENDS: "numpy==1.8.0"
-#      TEST_DEPENDS: "numpy==1.8.0"
-#    - PYTHON: "C:\\Miniconda3"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "32"
-#      BUILD_DEPENDS: "numpy==1.9.0"
-#      TEST_DEPENDS: "numpy==1.9.0"
-#    - PYTHON: "C:\\Miniconda3-x64"
-#      PYTHON_VERSION: "3.4"
-#      PYTHON_ARCH: "64"
-#      BUILD_DEPENDS: "numpy==1.9.0"
-#      TEST_DEPENDS: "numpy==1.9.0"
-#    - PYTHON: "C:\\Miniconda35"
-#      PYTHON_VERSION: "3.5"
-#      PYTHON_ARCH: "32"
-#      BUILD_DEPENDS: "numpy==1.10.1"
-#      TEST_DEPENDS: "numpy==1.10.1"
-#    - PYTHON: "C:\\Miniconda35-x64"
-#      PYTHON_VERSION: "3.5"
-#      PYTHON_ARCH: "64"
-#      BUILD_DEPENDS: "numpy==1.10.1"
-#      TEST_DEPENDS: "numpy==1.10.1"
     - PYTHON: "C:\\Miniconda36"
-      PYTHON_VERSION: "3.7"
+      PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "32"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
     - PYTHON: "C:\\Miniconda36-x64"
-      PYTHON_VERSION: "3.7"
+      PYTHON_VERSION: "3.6"
       PYTHON_ARCH: "64"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
-    - PYTHON: "C:\\Miniconda36"
-      PYTHON_VERSION: "3.8"
+    - PYTHON: "C:\\Miniconda37"
+      PYTHON_VERSION: "3.7"
       PYTHON_ARCH: "32"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
-    - PYTHON: "C:\\Miniconda36-x64"
-      PYTHON_VERSION: "3.8"
+    - PYTHON: "C:\\Miniconda37-x64"
+      PYTHON_VERSION: "3.7"
       PYTHON_ARCH: "64"
       BUILD_DEPENDS: "numpy==1.17.3"
       TEST_DEPENDS: "numpy==1.17.3"
 
 
-image: Visual Studio 2017
-configuration: Release
+
 # We always use a 64-bit machine, but can build x86 distributions
 # with the TARGET_ARCH variable.
 platform:
@@ -79,7 +48,6 @@ install:
     - git submodule update --init --recursive
 
     # Install miniconda
-    - ps: .\\multibuild\\ci\\appveyor\\install.ps1
     - SET PATH=%PYTHON%;%PYTHON%\Scripts;%PYTHON%\Library\bin;%PATH%
     - conda info
 
