--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ env:
   global:
   - REPO_DIR=muLFC
   - BUILD_COMMIT=v0.0.3
-  - BUILD_DEPENDS="numpy==1.8.0"
-  - TEST_DEPENDS="numpy==1.12.0 pytest"
+  - BUILD_DEPENDS="numpy<=1.15.0"
+  - TEST_DEPENDS="numpy>=1.15.0 pytest"
   - PLAT=x86_64
   - UNICODE_WIDTH=32
 
